Remove rollBackToNode but fix other routing bugs